[gd_scene load_steps=14 format=3 uid="uid://dl4i10kek1iq4"]

[ext_resource type="Texture2D" uid="uid://dfii8ppnc7te2" path="res://Items/Checkpoints/End/Assets/End (Idle).png" id="1_45ppw"]
[ext_resource type="Script" path="res://Items/Checkpoints/End/next_level.gd" id="1_l40eb"]
[ext_resource type="Texture2D" uid="uid://btfxtcwbf326f" path="res://Items/Checkpoints/End/Assets/End (Pressed) (64x64).png" id="2_igfk6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gu0vf"]
atlas = ExtResource("2_igfk6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u7ft"]
atlas = ExtResource("2_igfk6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mih"]
atlas = ExtResource("2_igfk6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5uju"]
atlas = ExtResource("2_igfk6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bkse"]
atlas = ExtResource("2_igfk6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_srmuu"]
atlas = ExtResource("2_igfk6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_54lqc"]
atlas = ExtResource("2_igfk6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1an0g"]
atlas = ExtResource("2_igfk6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2bd0t"]
animations = [{
"frames": [ExtResource("1_45ppw")],
"loop": false,
"name": &"Idle",
"speed": 1.0
}, {
"frames": [SubResource("AtlasTexture_gu0vf"), SubResource("AtlasTexture_7u7ft"), SubResource("AtlasTexture_60mih"), SubResource("AtlasTexture_l5uju"), SubResource("AtlasTexture_5bkse"), SubResource("AtlasTexture_srmuu"), SubResource("AtlasTexture_54lqc"), SubResource("AtlasTexture_1an0g")],
"loop": false,
"name": &"Pressed",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1m4d"]
size = Vector2(32, 41)

[node name="NextLevel" type="Area2D"]
texture_filter = 1
texture_repeat = 1
collision_layer = 0
script = ExtResource("1_l40eb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
frames = SubResource("SpriteFrames_2bd0t")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -21.5)
shape = SubResource("RectangleShape2D_f1m4d")

[node name="PressJump" type="Label" parent="."]
visible = false
texture_filter = 1
texture_repeat = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -72.0
offset_right = 43.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "Press Jump"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
